# rgis

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/rgis-app/: Cargo.toml  build.rs
crates/rgis-app/src/: drag_zoom_box.rs  main.rs  map_area.rs  sidebar.rs  status_bar.rs  window.rs
crates/rgis-core/: Cargo.toml
crates/rgis-core/src/: lib.rs
crates/rgis-io/: Cargo.toml
crates/rgis-io/src/: flatgeobuf_reader.rs  geojson_reader.rs  lib.rs  shapefile_reader.rs
crates/rgis-render/: Cargo.toml
crates/rgis-render/src/: lib.rs
crates/rgis-render/src/gl/: mod.rs  tess.rs
crates/rgis-render/src/gl/shaders/: tile.frag  tile.vert  vector.vert
crates/rgis-tiles/: Cargo.toml
crates/rgis-tiles/src/: lib.rs
