[package]
name = "rgis-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
geo-types  = { workspace = true }
geo        = { workspace = true }
proj4rs    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
