[package]
name = "rgis-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rgis-core         = { path = "../rgis-core" }
geo-types         = { workspace = true }
geo               = { workspace = true }
glow              = { workspace = true }
lyon_tessellation = { workspace = true }
thiserror         = { workspace = true }
