[package]
name = "rgis-tiles"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rgis-core   = { path = "../rgis-core" }
geo-types   = { workspace = true }
tokio       = { workspace = true }
async-channel = { workspace = true }
reqwest     = { workspace = true }
image       = { workspace = true }
lru         = { workspace = true }
directories = { workspace = true }
thiserror   = { workspace = true }
